tests/snapshots/examples_fixtures/io__Day2Part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/Day2Part2.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
