tests/snapshots/examples_fixtures/io__aoc_day1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day1.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
